examples/test/testpolicy5249.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy5249
  namespace: namespace112
spec:
  podSelector:
    matchLabels:
      key48: value39
      key23: value42
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key2: value1
          key48: value37
      podSelector:
        matchLabels:
          key14: value14
          key23: value30
          key40: value39
